manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub
spec:
  selector:
    app.kubernetes.io/name: hub
  ports:
    - name: http
      port: 8787
      targetPort: http
